--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titulo do site</title>
+    <title></title>
 </head>
 <body>
     
@@ -11,20 +11,26 @@
 
         <header>
 <h1>
-    Titilo do site
+    João Malebo Curso
 </h1>
 
         </header>
         <article>
             <h2>
-                Artigo 001
+                Artigo - Curso de Python 001
             </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, voluptate architecto cumque ipsum natus adipisci laboriosam earum saepe unde impedit fugit ut blanditiis aut et dolorum, harum nisi quam laudantium.
+            </p>
         </article>
 
         <article>
             <h2>
-                Artigo 002
+                Artigo curso de Java 002
             </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos laborum, enim corrupti dolore possimus excepturi nemo. Repellat, doloribus facere ab praesentium recusandae, dolor aut cupiditate explicabo porro quidem quaerat. Dignissimos.
+            </p>
         </article>
     </main>
 
